--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                     <i class="fas fa-search"></i>
                 </button>
             </form>
-            <button class="random" id="random">
+            <button class="random-btn" id="random random-btn">
                 <i class="fas fa-random"></i>
             </button>
 
         </div>
-        
+
 
             <div id="result-heading"></div>
             <div class="meals" id="meals"></div>
