--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <i class="fas fa-search"></i>
                 </button>
             </form>
-            <button class="random-btn" id="random random-btn">
+            <button class="random-btn" id="random">
                 <i class="fas fa-random"></i>
             </button>
 
